Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/AActor.h

	DOTNET_EXPORT auto E_PROP_AActor_bActorSeamlessTraveled_GET(AActor* Ptr) { return Ptr->bActorSeamlessTraveled; }
	DOTNET_EXPORT void E_PROP_AActor_bActorSeamlessTraveled_SET(AActor* Ptr, uint8 Value) { Ptr->bActorSeamlessTraveled = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bAllowTickBeforeBeginPlay_GET(AActor* Ptr) { return Ptr->bAllowTickBeforeBeginPlay; }
	DOTNET_EXPORT void E_PROP_AActor_bAllowTickBeforeBeginPlay_SET(AActor* Ptr, uint8 Value) { Ptr->bAllowTickBeforeBeginPlay = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bAlwaysRelevant_GET(AActor* Ptr) { return Ptr->bAlwaysRelevant; }
	DOTNET_EXPORT void E_PROP_AActor_bAlwaysRelevant_SET(AActor* Ptr, uint8 Value) { Ptr->bAlwaysRelevant = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bAutoDestroyWhenFinished_GET(AActor* Ptr) { return Ptr->bAutoDestroyWhenFinished; }
	DOTNET_EXPORT void E_PROP_AActor_bAutoDestroyWhenFinished_SET(AActor* Ptr, uint8 Value) { Ptr->bAutoDestroyWhenFinished = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bBlockInput_GET(AActor* Ptr) { return Ptr->bBlockInput; }
	DOTNET_EXPORT void E_PROP_AActor_bBlockInput_SET(AActor* Ptr, uint8 Value) { Ptr->bBlockInput = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bCanBeDamaged_GET(AActor* Ptr) { return Ptr->bCanBeDamaged; }
	DOTNET_EXPORT void E_PROP_AActor_bCanBeDamaged_SET(AActor* Ptr, uint8 Value) { Ptr->bCanBeDamaged = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bCollideWhenPlacing_GET(AActor* Ptr) { return Ptr->bCollideWhenPlacing; }
	DOTNET_EXPORT void E_PROP_AActor_bCollideWhenPlacing_SET(AActor* Ptr, uint8 Value) { Ptr->bCollideWhenPlacing = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bEnableAutoLODGeneration_GET(AActor* Ptr) { return Ptr->bEnableAutoLODGeneration; }
	DOTNET_EXPORT void E_PROP_AActor_bEnableAutoLODGeneration_SET(AActor* Ptr, uint8 Value) { Ptr->bEnableAutoLODGeneration = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bExchangedRoles_GET(AActor* Ptr) { return Ptr->bExchangedRoles; }
	DOTNET_EXPORT void E_PROP_AActor_bExchangedRoles_SET(AActor* Ptr, uint8 Value) { Ptr->bExchangedRoles = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bFindCameraComponentWhenViewTarget_GET(AActor* Ptr) { return Ptr->bFindCameraComponentWhenViewTarget; }
	DOTNET_EXPORT void E_PROP_AActor_bFindCameraComponentWhenViewTarget_SET(AActor* Ptr, uint8 Value) { Ptr->bFindCameraComponentWhenViewTarget = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bGenerateOverlapEventsDuringLevelStreaming_GET(AActor* Ptr) { return Ptr->bGenerateOverlapEventsDuringLevelStreaming; }
	DOTNET_EXPORT void E_PROP_AActor_bGenerateOverlapEventsDuringLevelStreaming_SET(AActor* Ptr, uint8 Value) { Ptr->bGenerateOverlapEventsDuringLevelStreaming = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bHidden_GET(AActor* Ptr) { return Ptr->bHidden; }
	DOTNET_EXPORT void E_PROP_AActor_bHidden_SET(AActor* Ptr, uint8 Value) { Ptr->bHidden = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bIgnoresOriginShifting_GET(AActor* Ptr) { return Ptr->bIgnoresOriginShifting; }
	DOTNET_EXPORT void E_PROP_AActor_bIgnoresOriginShifting_SET(AActor* Ptr, uint8 Value) { Ptr->bIgnoresOriginShifting = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bNetLoadOnClient_GET(AActor* Ptr) { return Ptr->bNetLoadOnClient; }
	DOTNET_EXPORT void E_PROP_AActor_bNetLoadOnClient_SET(AActor* Ptr, uint8 Value) { Ptr->bNetLoadOnClient = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bNetStartup_GET(AActor* Ptr) { return Ptr->bNetStartup; }
	DOTNET_EXPORT void E_PROP_AActor_bNetStartup_SET(AActor* Ptr, uint8 Value) { Ptr->bNetStartup = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bNetTemporary_GET(AActor* Ptr) { return Ptr->bNetTemporary; }
	DOTNET_EXPORT void E_PROP_AActor_bNetTemporary_SET(AActor* Ptr, uint8 Value) { Ptr->bNetTemporary = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bNetUseOwnerRelevancy_GET(AActor* Ptr) { return Ptr->bNetUseOwnerRelevancy; }
	DOTNET_EXPORT void E_PROP_AActor_bNetUseOwnerRelevancy_SET(AActor* Ptr, uint8 Value) { Ptr->bNetUseOwnerRelevancy = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bOnlyRelevantToOwner_GET(AActor* Ptr) { return Ptr->bOnlyRelevantToOwner; }
	DOTNET_EXPORT void E_PROP_AActor_bOnlyRelevantToOwner_SET(AActor* Ptr, uint8 Value) { Ptr->bOnlyRelevantToOwner = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bPendingNetUpdate_GET(AActor* Ptr) { return Ptr->bPendingNetUpdate; }
	DOTNET_EXPORT void E_PROP_AActor_bPendingNetUpdate_SET(AActor* Ptr, uint8 Value) { Ptr->bPendingNetUpdate = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_bRelevantForNetworkReplays_GET(AActor* Ptr) { return Ptr->bRelevantForNetworkReplays; }
	DOTNET_EXPORT void E_PROP_AActor_bRelevantForNetworkReplays_SET(AActor* Ptr, uint8 Value) { Ptr->bRelevantForNetworkReplays = Value; }
	DOTNET_EXPORT auto E_AActor_SetActorHiddenInGame(AActor* Self, bool bNewHidden)
	{
		auto _p0 = bNewHidden;
		Self->SetActorHiddenInGame(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorLabelInternal(AActor* Self, char* NewActorLabelDirty, bool bMakeGloballyUniqueFName, bool bMarkDirty)
	{
		auto _p0 = ConvertFromManage_FString(NewActorLabelDirty);
		auto _p1 = bMakeGloballyUniqueFName;
		auto _p2 = bMarkDirty;
		Self->SetActorLabelInternal(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_SetActorRelativeScale3D(AActor* Self, INT_PTR NewRelativeScale)
	{
		auto _p0 = *(FVector*)NewRelativeScale;
		Self->SetActorRelativeScale3D(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorScale3D(AActor* Self, INT_PTR NewScale3D)
	{
		auto _p0 = *(FVector*)NewScale3D;
		Self->SetActorScale3D(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorTickEnabled(AActor* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetActorTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorTickInterval(AActor* Self, float TickInterval)
	{
		auto _p0 = TickInterval;
		Self->SetActorTickInterval(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetAutonomousProxy(AActor* Self, bool bInAutonomousProxy, bool bAllowForcePropertyCompare)
	{
		auto _p0 = bInAutonomousProxy;
		auto _p1 = bAllowForcePropertyCompare;
		Self->SetAutonomousProxy(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_SetLifeSpan(AActor* Self, float InLifespan)
	{
		auto _p0 = InLifespan;
		Self->SetLifeSpan(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetNetDormancy(AActor* Self, ENetDormancy NewDormancy)
	{
		auto _p0 = NewDormancy;
		Self->SetNetDormancy(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetNetDriverName(AActor* Self, char* NewNetDriverName)
	{
		auto _p0 = ConvertFromManage_FName(NewNetDriverName);
		Self->SetNetDriverName(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetNetUpdateTime(AActor* Self, float NewUpdateTime)
	{
		auto _p0 = NewUpdateTime;
		Self->SetNetUpdateTime(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetReplicateMovement(AActor* Self, bool bInReplicateMovement)
	{
		auto _p0 = bInReplicateMovement;
		Self->SetReplicateMovement(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetReplicates(AActor* Self, bool bInReplicates)
	{
		auto _p0 = bInReplicates;
		Self->SetReplicates(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetTickableWhenPaused(AActor* Self, bool bTickableWhenPaused)
	{
		auto _p0 = bTickableWhenPaused;
		Self->SetTickableWhenPaused(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetTickGroup(AActor* Self, ETickingGroup NewTickGroup)
	{
		auto _p0 = NewTickGroup;
		Self->SetTickGroup(_p0);
	}
	DOTNET_EXPORT auto E_AActor_ShouldTickIfViewportsOnly(AActor* Self)
	{
		return Self->ShouldTickIfViewportsOnly();
	}
	DOTNET_EXPORT auto E_AActor_SwapRolesForReplay(AActor* Self)
	{
		Self->SwapRolesForReplay();
	}
	DOTNET_EXPORT auto E_AActor_SyncReplicatedPhysicsSimulation(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->SyncReplicatedPhysicsSimulation_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_TearOff(AActor* Self)
	{
		Self->TearOff();
	}
	DOTNET_EXPORT auto E_AActor_TeleportSucceeded(AActor* Self, bool bIsATest)
	{
		auto _p0 = bIsATest;
		Self->TeleportSucceeded(_p0);
	}
	DOTNET_EXPORT auto E_AActor_Tick(AActor* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->Tick(_p0);
	}
	DOTNET_EXPORT auto E_AActor_TornOff(AActor* Self)
	{
		Self->TornOff();
	}
	DOTNET_EXPORT auto E_AActor_UninitializeComponents(AActor* Self)
	{
		Self->UninitializeComponents();
	}
	DOTNET_EXPORT auto E_AActor_UnregisterAllComponents(AActor* Self, bool bForReregister)
	{
		auto _p0 = bForReregister;
		Self->UnregisterAllComponents(_p0);
	}
	DOTNET_EXPORT auto E_AActor_UpdateAllReplicatedComponents(AActor* Self)
	{
		Self->UpdateAllReplicatedComponents();
	}
	DOTNET_EXPORT auto E_AActor_UpdateComponentTransforms(AActor* Self)
	{
		Self->UpdateComponentTransforms();
	}
	DOTNET_EXPORT auto E_AActor_UpdateOverlaps(AActor* Self, bool bDoNotifies)
	{
		auto _p0 = bDoNotifies;
		Self->UpdateOverlaps(_p0);
	}
	DOTNET_EXPORT auto E_AActor_UserConstructionScript(AActor* Self)
	{
		Self->UserConstructionScript();
	}
	DOTNET_EXPORT auto E_AActor_UseShortConnectTimeout(AActor* Self)
	{
		return Self->UseShortConnectTimeout();
	}
	DOTNET_EXPORT auto E_AActor_WasRecentlyRendered(AActor* Self, float Tolerance)
	{
		auto _p0 = Tolerance;
		return Self->WasRecentlyRendered(_p0);
	}